--- a/index.html
+++ b/index.html
@@ -14,40 +14,46 @@
   </ul>
   <a class="login-btn">LOG IN</a>
   <a href="#home">ABOUT</a>
-  <a href="#news">SOPPORT</a>
+  <a href="#news">SUPPORT</a>
   <a href="home.html">HOME</a>
   <p align="left">ADHVI</p>
+</div>
+<div class="intro">
+    <h1>ADHVI</h1>
+    Discover the power of our Portfolio Generation Website. Effortlessly create, customize, and share your portfolio.
+    <br>Showcase your talents and attract opportunities. Join our community and network with like-minded professionals.
+   <br> Start your journey to success today!
 </div>
 <div class="wrapper">
       <i id="left" class="fa-solid fa-angle-left"></i>
       <ul class="carousel">
         <li class="card">
-          <div class="img"><img src="img-1.jpg" alt="img" draggable="false"></div>
+          <div class="img"><img src="images/img-1.jpg" alt="img" draggable="false"></div>
           <h2>Slide 1</h2>
           <span>Sales Manager</span>
         </li>
         <li class="card">
-          <div class="img"><img src="img-2.jpg" alt="img" draggable="false"></div>
+          <div class="img"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
           <h2>Slide 2</h2>
           <span>Web Developer</span>
         </li>
         <li class="card">
-          <div class="img"><img src="img-3.jpg" alt="img" draggable="false"></div>
+          <div class="img"><img src="images/img-3.jpg" alt="img" draggable="false"></div>
           <h2>Slide 3</h2>
           <span>Online Teacher</span>
         </li>
         <li class="card">
-          <div class="img"><img src="img-4.jpg" alt="img" draggable="false"></div>
+          <div class="img"><img src="images/img-4.jpg" alt="img" draggable="false"></div>
           <h2>Slide 4</h2>
           <span>Freelancer</span>
         </li>
         <li class="card">
-          <div class="img"><img src="img-5.jpg" alt="img" draggable="false"></div>
+          <div class="img"><img src="images/img-5.jpg" alt="img" draggable="false"></div>
           <h2>Slide 5</h2>
           <span>Bank Manager</span>
         </li>
         <li class="card">
-          <div class="img"><img src="img-6.jpg" alt="img" draggable="false"></div>
+          <div class="img"><img src="images/img-6.jpg" alt="img" draggable="false"></div>
           <h2>Slide 6</h2>
           <span>App Designer</span>
         </li>
