--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
 </div>
 <div class="intro">
     <h1>ADHVI</h1>
-    Welcome to our cutting-edge Portfolio Generation platform, where your creativity finds its perfect canvas.
-    <br>With customizable templates designed to showcase your unique talents, you can bring your vision to life effortlessly.
-    <br>Whether you're an artist, designer, writer, or entrepreneur, our intuitive interface empowers you to craft a
-    <br>portfolio that speaks volumes about your expertise and passion. Share your masterpiece with the world at the click <br>of a button using our seamless link-sharing feature, enabling you to reach your audience wherever they may be.
-    <br>Join our community of innovators and elevate your professional presence today. Experience the ease of creating a stunning portfolio that captures the essence of who you are and what you do.
-    <br>Sign up now and let your work shine like never before!
+    Welcome to our cutting-edge Portfolio Generation platform, where your creativity finds its perfect canvas.<br>With customizable templates designed to showcase your unique talents, you can bring your vision to life effortlessly.<br>Whether you're an artist, designer, writer, or entrepreneur, our intuitive interface empowers you to craft a<br>portfolio that speaks volumes about your expertise and passion. Share your masterpiece with the world at the click <br>of a button using our seamless link-sharing feature, enabling you to reach your audience wherever they may be.<br>Join our community of innovators and elevate your professional presence today. Experience the ease of creating a stunning portfolio that captures the essence of who you are and what you do.<br>Sign up now and let your work shine like never before!
 </div>
 <div class="wrapper">
       <i id="left" class="fa-solid fa-angle-left"></i>
