--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <span class="close-btn hamburger-btn">Close</span>
   </ul>
   <a class="login-btn">LOG IN</a>
-  <a href="#home">ABOUT</a>
-  <a href="#news">SUPPORT</a>
+  <a href="about.html">ABOUT</a>
+  <a href="support.html">SUPPORT</a>
   <a href="home.html">HOME</a>
   <p align="left">ADHVI</p>
 </div>
