--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a class="login-btn">LOG IN</a>
   <a href="about.html">ABOUT</a>
   <a href="support.html">SUPPORT</a>
-  <a href="home.html">HOME</a>
+  <a href="index.html">HOME</a>
   <p align="left">ADHVI</p>
 </div>
 <div class="intro">
