--- a/support.html
+++ b/support.html
@@ -13,7 +13,7 @@
   </ul>
   <a href="about.html">ABOUT</a>
   <a href="support.html">SUPPORT</a>
-  <a href="home.html">HOME</a>
+  <a href="index.html">HOME</a>
   <p align="left">ADHVI</p>
 </div>
     <nav>
