--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<html>
+e<html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -13,7 +13,7 @@
   </ul>
   <a href="about.html">ABOUT</a>
   <a href="support.html">SUPPORT</a>
-  <a href="home.html">HOME</a>
+  <a href="index.html">HOME</a>
   <p align="left">ADHVI</p>
 </div>
     <nav>
