--- a/support.html
+++ b/support.html
@@ -16,13 +16,17 @@
   <a href="index.html">HOME</a>
   <p align="left">ADHVI</p>
 </div>
-    <nav>
-      <div class="ham-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </nav>
+<div class="support">
+  <form>
+    <h1>Support</h1>
+    <input type="text" id="firstName" placeholder="First Name" required>
+    <input type="text" id="lastName" placeholder="Last Name" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="text" id="mobile" placeholder="Mobile" required>
+    <h4>Type Your Message Here..</h4>
+    <textarea required></textarea>
+    <input type="submit" value="Send" id="button">
+  </form>
 </div>
 </body>
 </html>
