--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js" defer></script>
   <title>ADHVI</title>
 </head>
-<body bgcolor="#E8ADAA">
+<body style="background-image: linear-gradient(#033E3E 15%, #123456, #2B547E, #368BC1);">
 <div class="topnav">
   <ul class="links">
     <span class="close-btn hamburger-btn">Close</span>
@@ -20,7 +20,7 @@
 </div>
 <div class="intro">
     <h1>ADHVI</h1>
-    Welcome to our cutting-edge Portfolio Generation platform, where your creativity finds its perfect canvas.<br>With customizable templates designed to showcase your unique talents, you can bring your vision to life effortlessly.<br>Whether you're an artist, designer, writer, or entrepreneur, our intuitive interface empowers you to craft a<br>portfolio that speaks volumes about your expertise and passion. Share your masterpiece with the world at the click <br>of a button using our seamless link-sharing feature, enabling you to reach your audience wherever they may be.<br>Join our community of innovators and elevate your professional presence today. Experience the ease of creating a stunning portfolio that captures the essence of who you are and what you do.<br>Sign up now and let your work shine like never before!
+    Welcome to our Portfolio Generation platform, where your creativity finds its perfect canvas.<br>With customizable templates designed to showcase your unique talents, you can bring your vision <br>to life effortlessly.Whether you're an artist, designer, writer, or entrepreneur, our intuitive interface empowers you <br>to craft a portfolio that speaks volumes about your expertise and passion. Share your masterpiece with the world at <br>the click of a button using our seamless link-sharing feature, enabling you to reach your audience wherever <br>they may be. Join our community of innovators and elevate your professional presence today. Experience the<br> ease of creating a stunning portfolio that captures the essence of who you are and what you do.<br>Sign up now and let your work shine like never before!
 </div>
 <div class="wrapper">
       <i id="left" class="fa-solid fa-angle-left"></i>
