--- a/about.html
+++ b/about.html
@@ -16,13 +16,10 @@
   <a href="index.html">HOME</a>
   <p align="left">ADHVI</p>
 </div>
-    <nav>
-      <div class="ham-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </nav>
+<div class="about">
+  <pre>
+    <h1>About</h1>
+  </pre>
 </div>
 </body>
 </html>
